# hestia

./: .env.example  .gitignore  Caddyfile  README.md  ROADMAP.md  justfile
.github/workflows/: ci.yml
api/: .env.example  Cargo.toml
api/migrations/: 20260307000001_create_users.sql  20260307000002_create_webauthn_credentials.sql  20260307000003_create_cards.sql  20260307000004_create_receipts.sql  20260307000005_create_categories.sql
api/src/: config.rs  error.rs  lib.rs  main.rs
api/src/auth/: mod.rs  password.rs  session.rs  webauthn.rs
api/src/models/: card.rs  category.rs  mod.rs  receipt.rs  user.rs
api/src/routes/: auth.rs  cards.rs  categories.rs  mod.rs  receipts.rs
api/src/storage/: local.rs  mod.rs
api/tests/: auth_integration.rs  cards_integration.rs  receipts_integration.rs
deploy/: Caddyfile.prod  README.md  backup.sh  hestia-api.container  hestia-caddy.container  hestia-postgres.container  hestia.env.example  hestia.network
docker/: .env.example  Containerfile.api  Containerfile.web  Dockerfile.api  compose.yml  docker-compose.prod.yml  docker-compose.yml
docs/: development.md
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.html
web/src/lib/: api.test.ts  api.ts  auth.ts  cards-page.test.ts  login-page.test.ts  receipt-list.test.ts  receipt-upload-form.test.ts  register-page.test.ts  theme.ts
web/src/lib/components/: ErrorBanner.svelte  Spinner.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/receipts/: +page.svelte
(+5 files in other folders)
