[package]
name = "hestia-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
argon2 = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"] }
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
dotenvy = "0.15"
temp-env = "0.3"

[[bin]]
name = "hestia-api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"
